force-app/main/default/objects/CareBenefitVerifyRequest__c/CareBenefitVerifyRequest__c.object-meta.xml
<CustomObject>
    <label>CareBenefitVerifyRequest</label>
    <nameField>
        <label>CareBenefitVerifyRequest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CareBenefitVerifyRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>