force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/CPT__c.field-meta.xml
<CustomField>
    <fullName>CPT__c</fullName>
    <inlineHelpText>e.g., 99213</inlineHelpText>
    <label>CPT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>