force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/External_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Request_Id__c</fullName>
    <description>store the ID you send to the external system</description>
    <label>External Request Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>