force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/ICD10__c.field-meta.xml
<CustomField>
    <fullName>ICD10__c</fullName>
    <inlineHelpText>e.g., E11.9</inlineHelpText>
    <label>ICD10</label>
    <length>10</length>
    <type>Text</type>
</CustomField>