force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/Insurance_Information__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Information__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Insurance details</description>
    <label>Insurance Information</label>
    <referenceTo>MemberPlan</referenceTo>
    <relationshipLabel>CareBenefitVerifyRequests</relationshipLabel>
    <relationshipName>CareBenefitVerifyRequests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>