force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/Patient_Details__c.field-meta.xml
<CustomField>
    <fullName>Patient_Details__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Patient Deatils</description>
    <label>Patient Details</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CareBenefitVerifyRequests</relationshipLabel>
    <relationshipName>CareBenefitVerifyRequests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>