force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/Provider_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_First_Name__c</fullName>
    <label>Provider First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>