force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/Provider_Information__c.field-meta.xml
<CustomField>
    <fullName>Provider_Information__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Provider Information</description>
    <label>Provider Information</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CareBenefitVerifyRequests (Provider Information)</relationshipLabel>
    <relationshipName>CareBenefitVerifyRequests1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>