force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/Provider_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Last_Name__c</fullName>
    <label>Provider Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>