force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/Provider_NPI__c.field-meta.xml
<CustomField>
    <fullName>Provider_NPI__c</fullName>
    <label>Provider NPI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>