force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <inlineHelpText>e.g., office_visit, surgery, imaging</inlineHelpText>
    <label>ServiceType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>consultation</fullName>
            </value>
            <value>
                <fullName>infusion</fullName>
            </value>
            <value>
                <fullName>surgery</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Outpatient</fullName>
            </value>
            <value>
                <fullName>Inpatient</fullName>
            </value>
            <value>
                <fullName>Imaging</fullName>
            </value>
            <value>
                <fullName>Prior Authorization</fullName>
            </value>
            <value>
                <fullName>Behavioral</fullName>
            </value>
            <value>
                <fullName>Bh</fullName>
            </value>
            <value>
                <fullName>Sud</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Rx</fullName>
            </value>
            <value>
                <fullName>Formulary</fullName>
            </value>
            <value>
                <fullName>Dental Consultation</fullName>
            </value>
            <value>
                <fullName>Dental Surgery</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Eye</fullName>
            </value>
            <value>
                <fullName>hearing</fullName>
            </value>
            <value>
                <fullName>Audiology</fullName>
            </value>
            <value>
                <fullName>Dme</fullName>
            </value>
            <value>
                <fullName>Supplies</fullName>
            </value>
            <value>
                <fullName>Device</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Hospice</fullName>
            </value>
            <value>
                <fullName>Palliative</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>