force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/Subscriber_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Id__c</fullName>
    <label>Subscriber Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>