force-app/main/default/objects/CareBenefitVerifyRequest__c/listViews/Care_Representatives_CareBenefitVerifyRequest.listView-meta.xml
<ListView>
    <fullName>Care_Representatives_CareBenefitVerifyRequest</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Care Representatives</label>
    <queue>Medical</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>