force-app/main/default/objects/CareBenefitVerifyRequest__c/listViews/Dental_CareBenefitVerifyRequest.listView-meta.xml
<ListView>
    <fullName>Dental_CareBenefitVerifyRequest</fullName>
    <filterScope>Queue</filterScope>
    <label>Dental</label>
    <queue>Dental</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>