force-app/main/default/objects/CareBenefitVerifyRequest__c/listViews/Emergency_CareBenefitVerifyRequest.listView-meta.xml
<ListView>
    <fullName>Emergency_CareBenefitVerifyRequest</fullName>
    <filterScope>Queue</filterScope>
    <label>Emergency</label>
    <queue>Emergency</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>