force-app/main/default/objects/CareBenefitVerifyRequest__c/listViews/Medical_CareBenefitVerifyRequest.listView-meta.xml
<ListView>
    <fullName>Medical_CareBenefitVerifyRequest</fullName>
    <filterScope>Queue</filterScope>
    <label>Medical</label>
    <queue>Medical</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>